--- a/releases.html
+++ b/releases.html
@@ -45,7 +45,7 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Artists</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Releases</a>
