--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOY ALONE RECORDS</title>
-    <link rel="icon" href="assets/BOY ALONE LABEL icon.png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -62,7 +61,7 @@
           <div class="offcanvas-body" id="ham">
             <ul class="navbar-nav">
               <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Artists</a></li>
+              <li class="nav-item"><a class="nav-link" href="artist.html">Artists</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="releases.html">Releases</a>
               </li>
@@ -87,7 +86,7 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav ms-auto d-none d-lg-flex">
             <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Artists</a></li>
+            <li class="nav-item"><a class="nav-link" href="artist.html">Artists</a></li>
             <li class="nav-item">
               <a class="nav-link" href="releases.html">Releases</a>
             </li>
