--- a/artist.html
+++ b/artist.html
@@ -1,181 +1,282 @@
-    <!DOCTYPE html>
-    <html lang="en">
-    <head>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOY ALONE RECORDS</title>
-    <link rel="icon" href="assets/BOY ALONE LABEL icon.png">
-    <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="assets/BOY ALONE LABEL icon.png">
+    <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
     <link
-    rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
     />
     <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    defer
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      defer
     ></script>
     <link rel="stylesheet" href="styles.css" />
-    </head>
-    <head>
+  </head>
+  <head>
     <!-- Add Font Awesome CDN -->
     <link
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+      rel="stylesheet"
     />
-    </head>
+  </head>
 
-    <link
+  <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
-    />
-    <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
+  />
+  <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
 
-    <body>
+  <body class="artist-body">
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
-    <div class="container">
-    <a class="navbar-brand" href="#">
-    <img src="./assets/BOY ALONE LABEL.png" alt="logo" class="logo" />
-    BOY ALONE RECORDS
-    </a>
-    <button
-    id="hero"
-    class="navbar-toggler"
-    type="button"
-    data-bs-toggle="offcanvas"
-    data-bs-target="#navbarNav"
-    aria-controls="navbarNav"
-    >
-    <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarNav">
-    <div class="offcanvas-header">
-    <h5 class="offcanvas-title">Menu</h5>
-    <button
-    type="button"
-    class="btn-close btn-close-white"
-    data-bs-dismiss="offcanvas"
-    aria-label="Close"
-    ></button>
-    </div>
-    <div class="offcanvas-body" id="ham">
-    <ul class="navbar-nav">
-    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-    <li class="nav-item"><a class="nav-link" href="artist.html">Artists</a></li>
-    <li class="nav-item">
-    <a class="nav-link" href="releases.html">Releases</a>
-    </li>
-    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-    <br /><br /><br /><br />
-    <hr />
-    <img
-    src="./assets/BOY ALONE LABEL icon.png"
-    style="margin-left: 10%; margin-left: 5%"
-    alt="logo2"
-    class="logo2"
-    />
-    <div class="menu-nav">
-    <p>&copy 2025 Copyright</p>
-    <p>Privacy & Policy</p>
-    <!-- <p>2025 All Right Reserved</p>  -->
-    </div>
-    </ul>
-    </div>
-    </div>
-    <div class="collapse navbar-collapse">
-    <ul class="navbar-nav ms-auto d-none d-lg-flex">
-    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-    <li class="nav-item"><a class="nav-link" href="artist.html">Artists</a></li>
-    <li class="nav-item">
-    <a class="nav-link" href="releases.html">Releases</a>
-    </li>
-    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-    </ul>
-    </div>
-    </div>
+      <div class="container">
+        <a class="navbar-brand" href="#">
+          <img src="./assets/BOY ALONE LABEL.png" alt="logo" class="logo" />
+          BOY ALONE RECORDS
+        </a>
+        <button
+          id="hero"
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarNav">
+          <div class="offcanvas-header">
+            <h5 class="offcanvas-title">Menu</h5>
+            <button
+              type="button"
+              class="btn-close btn-close-white"
+              data-bs-dismiss="offcanvas"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="offcanvas-body" id="ham">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="artist.html">Artists</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="releases.html">Releases</a>
+              </li>
+              <li class="nav-item"><a class="nav-link" href="#">Our Sevices</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+              <br /><br /><br /><br />
+              <hr />
+              <img
+                src="./assets/BOY ALONE LABEL icon.png"
+                style="margin-left: 10%; margin-left: 5%"
+                alt="logo2"
+                class="logo2"
+              />
+              <div class="menu-nav">
+                <p>&copy 2025 Copyright</p>
+                <p>Privacy & Policy</p>
+                <!-- <p>2025 All Right Reserved</p>  -->
+              </div>
+            </ul>
+          </div>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav ms-auto d-none d-lg-flex"  id="nav-bar">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="artist.html">Artists</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="releases.html">Releases</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Our Sevices</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
     </nav>
 
     <section id="artists" class="content-section py-5">
-    <div class="container text-center">
-    <h2 class="mb-4"><b>Artists</b></h2>
-    <div class="row">
-    <!-- Artist 1 -->
-    <div class="col-md-4 mb-4">
-    <div class="card bg-black text-white border-0">
-    <img src="./assets/IMG-20250220-WA0004.jpg" class="card-img-top" alt="Artist 1">
-    <div class="card-body">
-    <h4 class="card-title" style="color: white; font-family: Arial; font-weight: bold;"><b>Eriq Lay</b></h4>
-    <p class="card-text"  style="color: white;">Genre: Afrobeat</p>
-    <a href="https://audiomack.com/eriq-dave" class="btn btn-outline-light" id="listen">Listen Now</a>
-    </div>
-    </div>
-    </div>
+      <div class="container text-center">
+        <h2 class="mb-4"><b>Artists</b></h2>
+        <div class="row">
+          <!-- Artist 1 -->
+          <div class="col-md-4 mb-4">
+            <div class="card bg-black text-white border-0">
+              <img
+                src="./assets/IMG-20250220-WA0004.jpg"
+                class="card-img-top"
+                alt="Artist 1"
+              />
+              <div class="card-body">
+                <h4
+                  class="card-title"
+                  style="color: white; font-family: Arial; font-weight: bold"
+                >
+                  <b>Eriq Lay</b>
+                </h4>
+                <p class="card-text" style="color: white">Genre: Afrobeat</p>
+                <a
+                  href="https://audiomack.com/eriq-dave"
+                  class="btn btn-outline-light"
+                  id="listen"
+                  >Listen Now</a
+                >
+              </div>
+            </div>
+          </div>
 
-    <!-- Artist 2 -->
-    <div class="col-md-4 mb-4">
-    <div class="card bg-dark text-white border-0">
-    <img src="./assets/3795801b973b2a2bece46f60454b3d7a.jpg" class="card-img-top" alt="Artist 1">
-    <div class="card-body">
-    <h4 class="card-title" style="color: white; font-family: Arial; font-weight: bold;"><b>Omah Lay</b></h4>
-    <p class="card-text"  style="color: white;">Genre: Afrobeat</p>
-    <a href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg" target="_blank" class="btn btn-outline-light" id="listen">Listen Now</a>
-    </div>
-    </div>
-    </div>
+          <!-- Artist 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="card bg-dark text-white border-0">
+              <img
+                src="./assets/3795801b973b2a2bece46f60454b3d7a.jpg"
+                class="card-img-top"
+                alt="Artist 1"
+              />
+              <div class="card-body">
+                <h4
+                  class="card-title"
+                  style="color: white; font-family: Arial; font-weight: bold"
+                >
+                  <b>Omah Lay</b>
+                </h4>
+                <p class="card-text" style="color: white">Genre: Afrobeat</p>
+                <a
+                  href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
+                  target="_blank"
+                  class="btn btn-outline-light"
+                  id="listen"
+                  >Listen Now</a
+                >
+              </div>
+            </div>
+          </div>
 
-    <!-- Artist 3 -->
-    <div class="col-md-4 mb-4" id="profile">
-    <div class="card bg-dark text-white border-0">
-    <img src="./assets/1269f947688682d833ce5b634bffe0c9.jpg" class="card-img-top" alt="Artist 1">
-    <div class="card-body">
-    <h4 class="card-title" style="color: white; font-family: Arial; font-weight: bold;"><b>Eminem</b></h4>
-    <p class="card-text"  style="color: white;">Genre: Hip-Hop</p>
-    <a href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg" target="_blank" class="btn btn-outline-light" id="listen">Listen Now</a>
-    </div>
-    </div>
-    </div>
-    </div>
-    <section id="artists" class="content-section py-5">
-    <div class="container text-center">
-    <h2 class="mb-4">Featured Artists</h2>
-    <div class="row">
-    <!-- Artist 4 -->
-    <div class="col-md-4 mb-4">
-    <div class="card bg-black text-white border-0">
-    <img src="./assets/woman-recording-song-professional-music-studio-happy-young-woman-recording-song-professional-music-studio-smiling-101759551.webp" class="card-img-top" alt="Artist 1">
-    <div class="card-body">
-    <h4 class="card-title" style="color: white; font-family: Arial; font-weight: bold;"><b>Eriq Lay</b></h4>
-    <p class="card-text"  style="color: white;">Genre: Blues</p>
-    <a href="#" class="btn btn-outline-light" id="listen">Listen Now</a>
-    </div>
-    </div>
-    </div>
-    <!-- Artist 5 -->
-    <div class="col-md-4 mb-4" id="profile">
-    <div class="card bg-dark text-white border-0">
-    <img src="./assets/e7eda7dd7fdf6902b8466c4c09bcb93a.jpg" class="card-img-top" alt="Artist 1">
-    <div class="card-body">
-    <h4 class="card-title" style="color: white; font-family: Arial; font-weight: bold;"><b>Eriq Lay</b></h4>
-    <p class="card-text"  style="color: white;">Genre: Afrobeat</p>
-    <a href="#" class="btn btn-outline-light" id="listen">Listen Now</a>
-    </div>
-    </div>
-    </div>
-    <!-- Artist 6 -->
-    <div class="col-md-4 mb-4">
-    <div class="card bg-dark text-white border-0">
-    <img src="./assets/8f9f1c9114481d4d393203fa875846d9.jpg" class="card-img-top" alt="Artist 1">
-    <div class="card-body">
-    <h4 class="card-title" style="color: white; font-family: Arial; font-weight: bold;"><b>Eriq Lay</b></h4>
-    <p class="card-text"  style="color: white;">Genre: Afrobeat</p>
-    <a href="#" class="btn btn-outline-light" id="listen">Listen Now</a>
-    </div>
-    </div>
-    </div>
+          <!-- Artist 3 -->
+          <div class="col-md-4 mb-4" id="profile">
+            <div class="card bg-dark text-white border-0">
+              <img
+                src="./assets/1269f947688682d833ce5b634bffe0c9.jpg"
+                class="card-img-top"
+                alt="Artist 1"
+              />
+              <div class="card-body">
+                <h4
+                  class="card-title"
+                  style="color: white; font-family: Arial; font-weight: bold"
+                >
+                  <b>Eminem</b>
+                </h4>
+                <p class="card-text" style="color: white">Genre: Hip-Hop</p>
+                <a
+                  href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
+                  target="_blank"
+                  class="btn btn-outline-light"
+                  id="listen"
+                  >Listen Now</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+        <section id="artists" class="content-section">
+            <div class="container text-center">
+              <h2 class="mb-3"><b> Featured Artists</b></h2>
+              <div class="row">
+        <!-- Artist 1 -->
+        <div class="col-md-4 mb-4">
+          <div class="card bg-black text-white border-0">
+            <img
+              src="./assets/IMG-20250220-WA0004.jpg"
+              class="card-img-top"
+              alt="Artist 1"
+            />
+            <div class="card-body">
+              <h4
+                class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold"
+              >
+                <b>Eriq Lay</b>
+              </h4>
+              <p class="card-text" style="color: white">Genre: Afrobeat</p>
+              <a
+                href="https://audiomack.com/eriq-dave"
+                class="btn btn-outline-light"
+                id="listen"
+                >Listen Now</a
+              >
+            </div>
+          </div>
+        </div>
 
-    </body>
-    </html>
+        <!-- Artist 2 -->
+        <div class="col-md-4 mb-4">
+          <div class="card bg-dark text-white border-0">
+            <img
+              src="./assets/3795801b973b2a2bece46f60454b3d7a.jpg"
+              class="card-img-top"
+              alt="Artist 1"
+            />
+            <div class="card-body">
+              <h4
+                class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold"
+              >
+                <b>Omah Lay</b>
+              </h4>
+              <p class="card-text" style="color: white">Genre: Afrobeat</p>
+              <a
+                href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
+                target="_blank"
+                class="btn btn-outline-light"
+                id="listen"
+                >Listen Now</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!-- Artist 3 -->
+        <div class="col-md-4 mb-4" id="profile">
+          <div class="card bg-dark text-white border-0">
+            <img
+              src="./assets/1269f947688682d833ce5b634bffe0c9.jpg"
+              class="card-img-top"
+              alt="Artist 1"
+            />
+            <div class="card-body">
+              <h4
+                class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold"
+              >
+                <b>Eminem</b>
+              </h4>
+              <p class="card-text" style="color: white">Genre: Hip-Hop</p>
+              <a
+                href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
+                target="_blank"
+                class="btn btn-outline-light"
+                id="listen"
+                >Listen Now</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+  </body>
+</html>
