--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOY ALONE RECORDS</title>
+    <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -60,10 +60,17 @@
           </div>
           <div class="offcanvas-body" id="ham">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-              <li class="nav-item"><a class="nav-link" href="artist.html">Artists</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="artist.html">Artists</a>
+              </li>
               <li class="nav-item">
                 <a class="nav-link" href="releases.html">Releases</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Sevices</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -84,11 +91,18 @@
           </div>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto d-none d-lg-flex">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="artist.html">Artists</a></li>
+          <ul class="navbar-nav ms-auto d-none d-lg-flex" id="nav-bar">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="artist.html">Artists</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="releases.html">Releases</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Sevices</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
