--- a/releases.html
+++ b/releases.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOY ALONE RECORDS</title>
+    <link rel="icon" href="assets/BOY ALONE LABEL icon.png">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -14,8 +15,6 @@
     ></script>
     <link rel="stylesheet" href="styles.css" />
   </head>
-
-  
   <body>
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
@@ -45,10 +44,15 @@
           </div>
           <div class="offcanvas-body">
             <ul class="navbar-nav">
-              <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+              <li class="nav-item">
+                <a class="nav-link" href="index.html">Home</a>
+              </li>
               <li class="nav-item"><a class="nav-link" href="#">Artists</a></li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Releases</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Our Sevices</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -69,11 +73,18 @@
           </div>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto d-none d-lg-flex">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Artists</a></li>
+          <ul class="navbar-nav ms-auto d-none d-lg-flex" id="nav-bar">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="artist.html">Artists</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link" href="releases.html">Releases</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Our Sevices</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
