--- a/artist.html
+++ b/artist.html
@@ -33,7 +33,8 @@
   />
   <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
 
-  <body class="artist-body">
+  <body style="background-color: black;">
+    <header  style="box-shadow: 0 0 23px red;">
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -108,14 +109,15 @@
         </div>
       </div>
     </nav>
+  </header>
 
     <section id="artists" class="content-section py-5">
       <div class="container text-center">
-        <h2 class="mb-4"><b>Artists</b></h2>
+        <h2 class="mb-4"><b style="color: white;">Artists</b></h2>
         <div class="row">
           <!-- Artist 1 -->
           <div class="col-md-4 mb-4">
-            <div class="card bg-black text-white border-0">
+            <div class="card bg-black text-white border-0" id="myMusic">
               <img
                 src="./assets/IMG-20250220-WA0004.jpg"
                 class="card-img-top"
@@ -141,7 +143,7 @@
 
           <!-- Artist 2 -->
           <div class="col-md-4 mb-4">
-            <div class="card bg-dark text-white border-0">
+            <div class="card bg-dark text-white border-0" id="myMusic">
               <img
                 src="./assets/3795801b973b2a2bece46f60454b3d7a.jpg"
                 class="card-img-top"
@@ -168,7 +170,7 @@
 
           <!-- Artist 3 -->
           <div class="col-md-4 mb-4" id="profile">
-            <div class="card bg-dark text-white border-0">
+            <div class="card bg-dark text-white border-0" id="myMusic">
               <img
                 src="./assets/1269f947688682d833ce5b634bffe0c9.jpg"
                 class="card-img-top"
@@ -195,11 +197,11 @@
         </div>
         <section id="artists" class="content-section">
             <div class="container text-center">
-              <h2 class="mb-3"><b> Featured Artists</b></h2>
+              <h2 class="mb-3"><b style="color: white;"> Featured Artists</b></h2>
               <div class="row">
-        <!-- Artist 1 -->
+        <!-- Artist 4 -->
         <div class="col-md-4 mb-4">
-          <div class="card bg-black text-white border-0">
+          <div class="card bg-black text-white border-0" id="myMusic">
             <img
               src="./assets/IMG-20250220-WA0004.jpg"
               class="card-img-top"
@@ -223,9 +225,9 @@
           </div>
         </div>
 
-        <!-- Artist 2 -->
+        <!-- Artist 5 -->
         <div class="col-md-4 mb-4">
-          <div class="card bg-dark text-white border-0">
+          <div class="card bg-dark text-white border-0" id="myMusic">
             <img
               src="./assets/3795801b973b2a2bece46f60454b3d7a.jpg"
               class="card-img-top"
@@ -250,9 +252,9 @@
           </div>
         </div>
 
-        <!-- Artist 3 -->
+        <!-- Artist 6 -->
         <div class="col-md-4 mb-4" id="profile">
-          <div class="card bg-dark text-white border-0">
+          <div class="card bg-dark text-white border-0" id="myMusic">
             <img
               src="./assets/1269f947688682d833ce5b634bffe0c9.jpg"
               class="card-img-top"
