--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
   />
   <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
 
-  <body>
+  <body style="background-color: #000;">
+    <header>
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -110,7 +111,7 @@
         </div>
       </div>
     </nav>
-
+  </header>
     <!-- MAin Content -->
 
     <section>
@@ -192,7 +193,7 @@
           </div>
           <div
             class="carousel-item"
-            data-bs-interval="3700"
+            data-bs-interval="4000"
             style="background-color: black"
           >
             <img
@@ -228,6 +229,102 @@
             <span class="visually-hidden">Next</span>
           </button>
         </div>
+      </div>
+    </section>
+
+    <!-- BODY SECTION -->
+   <button class="rel"> <a style="text-decoration: none; color: white;" href="releases.html"><h1 ><b>Latest Releases 2025 <b style="scale: 9rem;">>></b></a></h1></button>
+    <section >
+      <div class="rel1">
+      <div class="container ">
+      <div class="row">
+<!-- Artist 1 -->
+
+<div class="col-md-4 mb-4" >
+  <div class="card bg-dark text-white border-0" id="mymusic">
+    <img
+      src="assets/1738350498267.png.jpg"
+      class="card-img-top"
+      alt="Artist 1"
+    />
+    <div class="card-body" id="card-body1">
+      <h4
+        class="card-title"
+        style="color: white; font-family: Arial; font-weight: bold"
+      >
+        <b>Depression</b>
+      </h4>
+      <h5 class="card-title"
+        style="color: white; font-family: Arial; font-weight: bold">Eriq Lay</h5>
+      <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
+      <a
+        href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
+        target="_blank"
+        class="btn btn-outline-light"
+        >Listen Now</a
+      >
+    </div>
+  </div>
+</div>
+        <!-- Artist 2 -->
+        <div class="col-md-4 mb-4">
+          <div class="card bg-dark text-white border-0" id="mymusic">
+            <img
+              src="assets\IMG_20240712_154441.jpg"
+              class="card-img-top"
+              alt="Artist 1"
+            />
+            <div class="card-body" id="card-body1">
+              <h4
+                class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold"
+              >
+                <b>Closer</b>
+              </h4>
+              <h5 class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold">Eriq Lay</h5>
+              <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
+              <a
+                href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
+                target="_blank"
+                class="btn btn-outline-light"
+                >Listen Now</a
+              >
+            </div>
+          </div>
+        </div>
+
+        <!-- Artist 3 -->
+        <div class="col-md-4 mb-4" id="profile">
+          <div class="card bg-dark text-white border-0" id="mymusic">
+            <img
+              src="/assets/1735854669021.png.jpg"
+              class="card-img-top"
+              alt="Artist 1"
+            />
+            <div class="card-body" id="card-body1">
+              <h4
+                class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold"
+              >
+                <b>Love Anthem</b>
+              </h4>
+              <h5 class="card-title"
+                style="color: white; font-family: Arial; font-weight: bold">Young Tee ft Eriq Lay</h5>
+              <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
+              <a
+                href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
+                target="_blank"
+                class="btn btn-outline-light"
+                >Listen Now</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+          </div>
+        </div>
+      </div>
       </div>
     </section>
   </body>
