--- a/releases.html
+++ b/releases.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <header  style="box-shadow: 0 0 23px red;">
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -92,7 +93,7 @@
         </div>
       </div>
     </nav>
-
+</header>
     <!-- MAin Content -->
     <section id="artists" class="content-section">
       <div class="container">
