--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
         <div class="col-md-4 mb-4" id="profile">
           <div class="card bg-dark text-white border-0" id="mymusic">
             <img
-              src="/assets/1735854669021.png.jpg"
+              src="./assets/1735854669021.jpg"
               class="card-img-top"
               alt="Artist 1"
             />
