adding some additional files

--- a/artist.html
+++ b/artist.html
@@ -31,10 +31,11 @@
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"
   />
-  <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
+  <link rel="icon" href="/assets/BOY ALONE LABEL icon.png">
 
-  <body style="background-color: black;">
-    <header  style="box-shadow: 0 0 23px red;">
+
+  <body >
+    <header>
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -113,13 +114,13 @@
 
     <section id="artists" class="content-section py-5">
       <div class="container text-center">
-        <h2 class="mb-4"><b style="color: white;">Artists</b></h2>
+        <h2 class="mb-4"><b>Artists</b></h2>
         <div class="row">
           <!-- Artist 1 -->
           <div class="col-md-4 mb-4">
             <div class="card bg-black text-white border-0" id="myMusic">
               <img
-                src="./assets/IMG-20250220-WA0004.jpg"
+                src="assets/profile.jpg"
                 class="card-img-top"
                 alt="Artist 1"
               />
@@ -203,7 +204,7 @@
         <div class="col-md-4 mb-4">
           <div class="card bg-black text-white border-0" id="myMusic">
             <img
-              src="./assets/IMG-20250220-WA0004.jpg"
+              src="./assets/1ceeb6b202fc02bc4ba67d3c5e5c3549.webp"
               class="card-img-top"
               alt="Artist 1"
             />
@@ -212,9 +213,9 @@
                 class="card-title"
                 style="color: white; font-family: Arial; font-weight: bold"
               >
-                <b>Eriq Lay</b>
+                <b>Central Cee</b>
               </h4>
-              <p class="card-text" style="color: white">Genre: Afrobeat</p>
+              <p class="card-text" style="color: white">Genre: Drill & Rap</p>
               <a
                 href="https://audiomack.com/eriq-dave"
                 class="btn btn-outline-light"
