--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BOY ALONE RECORDS</title>
-    <link rel="icon" href="assets/BOY ALONE LABEL icon.png" />
+    <link rel="icon" href="/assets/BOY ALONE LABEL icon.png">
+
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
@@ -13,7 +14,7 @@
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
       defer
     ></script>
-    <link rel="stylesheet" href="styles.css" />
+<link rel="stylesheet" href="/styles.css">
   </head>
   <head>
     <!-- Add Font Awesome CDN -->
@@ -71,7 +72,7 @@
                 <a class="nav-link" href="releases.html">Releases</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Our Sevices</a>
+                <a class="nav-link" href="services.html">Our Sevices</a>
               </li>
               <li class="nav-item"><a class="nav-link" href="#">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -103,7 +104,7 @@
               <a class="nav-link" href="releases.html">Releases</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Our Sevices</a>
+              <a class="nav-link" href="services.html">Our Sevices</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -258,8 +259,7 @@
         style="color: white; font-family: Arial; font-weight: bold">Eriq Lay</h5>
       <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
       <a
-        href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
-        target="_blank"
+        href="https://audiomack.com/eriq-dave/song/depression-remedynaijacom?share-user-id=77103724"
         class="btn btn-outline-light"
         >Listen Now</a
       >
@@ -285,8 +285,7 @@
                 style="color: white; font-family: Arial; font-weight: bold">Eriq Lay</h5>
               <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
               <a
-                href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
-                target="_blank"
+                href="https://audiomack.com/eriq-dave/song/closer-daveflavercom?share-user-id=77103724"
                 class="btn btn-outline-light"
                 >Listen Now</a
               >
@@ -313,8 +312,7 @@
                 style="color: white; font-family: Arial; font-weight: bold">Young Tee ft Eriq Lay</h5>
               <p class="card-text" style="color: rgba(255, 255, 255, 0.58)">Genre: Afrobeat</p>
               <a
-                href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
-                target="_blank"
+                href="https://audiomack.com/eriq-dave/song/love-anthem-daveflavercom?share-user-id=77103724"
                 class="btn btn-outline-light"
                 >Listen Now</a
               >
