--- a/releases.html
+++ b/releases.html
@@ -1,166 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BOY ALONE RECORDS</title>
-    <link rel="icon" href="assets/BOY ALONE LABEL icon.png">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Releases</title>
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="/assets/BOY ALONE LABEL icon.png">
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-      defer
-    ></script>
-    <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body>
-    <header  style="box-shadow: 0 0 23px red;">
-    <nav class="navbar navbar-dark bg-black navbar-expand-lg">
-      <div class="container">
-        <a class="navbar-brand" href="#">
-          <img src="./assets/BOY ALONE LABEL.png" alt="logo" class="logo" />
-          BOY ALONE RECORDS
-        </a>
-        <button
-          id="hero"
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="offcanvas"
-          data-bs-target="#navbarNav"
-          aria-controls="navbarNav"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarNav">
-          <div class="offcanvas-header">
-            <h5 class="offcanvas-title">Menu</h5>
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+  />
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+    defer
+  ></script>
+  <link rel="stylesheet" href="/styles.css" />
+</head>
+<head>
+  <!-- Add Font Awesome CDN -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    rel="stylesheet"
+  />
+</head>
+
+<link
+  href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+  rel="stylesheet"
+  integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+  crossorigin="anonymous"
+/>
+<link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
+</head>
+<body>
+    <header>
+        <nav class="navbar navbar-dark bg-black navbar-expand-lg" style="position: fixed; width: 100%; z-index: 10000; margin-top: -12%;">
+          <div class="container">
+            <a class="navbar-brand" href="#">
+              <img src="/assets/BOY ALONE LABEL.png" alt="logo" class="logo" />
+              BOY ALONE RECORDS
+            </a>
             <button
+              id="hero"
+              class="navbar-toggler"
               type="button"
-              class="btn-close btn-close-white"
-              data-bs-dismiss="offcanvas"
-              aria-label="Close"
-            ></button>
-          </div>
-          <div class="offcanvas-body">
-            <ul class="navbar-nav">
-              <li class="nav-item">
-                <a class="nav-link" href="index.html">Home</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#">Artists</a></li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Releases</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Our Sevices</a>
-              </li>
-              <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-              <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-              <br /><br /><br /><br />
-              <hr />
-              <img
-                src="./assets/BOY ALONE LABEL icon.png"
-                style="margin-left: 10%; margin-left: 5%"
-                alt="logo2"
-                class="logo2"
-              />
-              <div class="menu-nav">
-                <p>&copy 2025 Copyright</p>
-                <p>Privacy & Policy</p>
-                <!-- <p>2025 All Right Reserved</p>  -->
+              data-bs-toggle="offcanvas"
+              data-bs-target="#navbarNav"
+              aria-controls="navbarNav"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="offcanvas offcanvas-end" tabindex="-1" id="navbarNav">
+              <div class="offcanvas-header">
+                <h5 class="offcanvas-title">Menu</h5>
+                <button
+                  type="button"
+                  class="btn-close btn-close-white"
+                  data-bs-dismiss="offcanvas"
+                  aria-label="Close"
+                ></button>
               </div>
-            </ul>
-          </div>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-auto d-none d-lg-flex" id="nav-bar">
-            <li class="nav-item">
-              <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="artist.html">Artists</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="releases.html">Releases</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Our Sevices</a>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="#">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-</header>
-    <!-- MAin Content -->
-    <section id="artists" class="content-section">
-      <div class="container">
-        <h2 class="text-center">Featured Artists</h2>
-        <div class="row">
-          <div class="col-md-4">
-            <div class="artist-card">
-              <img src="artist1.jpg" alt="Artist 1" />
-              <h4 class="mt-3">Artist Name 1</h4>
-              <p>Genre: Hip-Hop</p>
+              <div class="offcanvas-body" id="ham">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="index.html">Home</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="artist.html">Artists</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="releases.html">Releases</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="services.html">Our Sevices</a>
+                  </li>
+                  <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                  <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                  <br /><br /><br /><br />
+                  <hr />
+                  <img
+                    src="/assets/BOY ALONE LABEL icon.png"
+                    style="margin-left: 10%; margin-left: 5%"
+                    alt="logo2"
+                    class="logo2"
+                  />
+                  <div class="menu-nav">
+                    <p>&copy 2025 Copyright</p>
+                    <p>Privacy & Policy</p>
+                    <!-- <p>2025 All Right Reserved</p>  -->
+                  </div>
+                </ul>
+              </div>
+            </div>
+            <div class="collapse navbar-collapse">
+              <ul class="navbar-nav ms-auto d-none d-lg-flex" id="nav-bar">
+                <li class="nav-item">
+                  <a class="nav-link" href="index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="artist.html">Artists</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="releases.html">Releases</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="services.html">Our Sevices</a>
+                </li>
+                <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+              </ul>
             </div>
           </div>
-          <div class="col-md-4">
-            <div class="artist-card">
-              <img src="artist2.jpg" alt="Artist 2" />
-              <h4 class="mt-3">Artist Name 2</h4>
-              <p>Genre: Afrobeat</p>
-            </div>
-          </div>
-          <div class="col-md-4">
-            <div class="artist-card">
-              <img src="artist3.jpg" alt="Artist 3" />
-              <h4 class="mt-3">Artist Name 3</h4>
-              <p>Genre: R&B</p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+        </nav>
+      </header>
 
-    <section id="releases" class="content-section bg-dark">
-      <div class="container">
-        <h2 class="text-center">Latest Releases</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <img src="album1.jpg" alt="Album 1" class="img-fluid" />
-            <h4 class="mt-3">Album Title 1</h4>
-            <p>Released: 2025</p>
-          </div>
-          <div class="col-md-6">
-            <img src="album2.jpg" alt="Album 2" class="img-fluid" />
-            <h4 class="mt-3">Album Title 2</h4>
-            <p>Released: 2025</p>
-          </div>
-        </div>
-      </div>
-    </section>
 
-    <section id="about" class="content-section">
-      <div class="container">
-        <h2 class="text-center">About Us</h2>
-        <p class="text-center">
-          BOY ALONE RECORDS is an independent music label dedicated to
-          discovering and promoting the best talent in the industry. Our mission
-          is to push boundaries and elevate artists to global success.
-        </p>
-      </div>
-    </section>
+      <section>
+        <main>
+          <div class="myaudio">
+          <iframe
+            src="https://audiomack.com/embed/eriq-lay/song/depression-remedynaijacom"
+            scrolling="no"
+            width="100%"
+            height="252"
+            frameborder="0"
+            title="DEPRESSION || RemedyNaija.com"
+          ></iframe><br><br>
+          <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+       <button style="background-color: green; color: white; scale: 1.2;">Download</button>
+       </a>
+       </div>
+       <hr>
+     
+         
 
-    <section id="contact" class="content-section bg-dark">
-      <div class="container">
-        <h2 class="text-center">Contact Us</h2>
-        <p class="text-center">
-          For bookings and inquiries, email us at
-          <a href="mailto:info@boyalonerecords.com">info@boyalonerecords.com</a>
-        </p>
-      </div>
-    </section>
-  </body>
+        </main>
+      </section>
+</body>
 </html>
