responsive to some parts

--- a/artist.html
+++ b/artist.html
@@ -73,7 +73,7 @@
               <li class="nav-item">
                 <a class="nav-link" href="releases.html">Releases</a>
               </li>
-              <li class="nav-item"><a class="nav-link" href="#">Our Sevices</a></li>
+              <li class="nav-item"><a class="nav-link" href="services.html">Our Sevices</a></li>
               <li class="nav-item"><a class="nav-link" href="#">About</a></li>
               <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
               <br /><br /><br /><br />
@@ -103,7 +103,7 @@
             <li class="nav-item">
               <a class="nav-link" href="releases.html">Releases</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Our Sevices</a></li>
+            <li class="nav-item"><a class="nav-link" href="services.html">Our Sevices</a></li>
             <li class="nav-item"><a class="nav-link" href="#">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
           </ul>
@@ -196,90 +196,91 @@
             </div>
           </div>
         </div>
-        <section id="artists" class="content-section">
-            <div class="container text-center">
-              <h2 class="mb-3"><b style="color: white;"> Featured Artists</b></h2>
-              <div class="row">
-        <!-- Artist 4 -->
-        <div class="col-md-4 mb-4">
-          <div class="card bg-black text-white border-0" id="myMusic">
-            <img
-              src="./assets/1ceeb6b202fc02bc4ba67d3c5e5c3549.webp"
-              class="card-img-top"
-              alt="Artist 1"
-            />
-            <div class="card-body">
-              <h4
-                class="card-title"
-                style="color: white; font-family: Arial; font-weight: bold"
-              >
-                <b>Central Cee</b>
-              </h4>
-              <p class="card-text" style="color: white">Genre: Drill & Rap</p>
-              <a
-                href="https://audiomack.com/eriq-dave"
-                class="btn btn-outline-light"
-                id="listen"
-                >Listen Now</a
-              >
+        
+    <section id="artists" class="content-section py-5">
+      <div class="container text-center">
+        <h2 class="mb-4"><b>Featured Artist</b></h2>
+        <div class="row">
+          <!-- Artist 1 -->
+          <div class="col-md-4 mb-4">
+            <div class="card bg-black text-white border-0" id="myMusic">
+              <img
+                src="assets/1ceeb6b202fc02bc4ba67d3c5e5c3549.webp"
+                class="card-img-top"
+                alt="Artist 1"
+              />
+              <div class="card-body">
+                <h4
+                  class="card-title"
+                  style="color: white; font-family: Arial; font-weight: bold"
+                >
+                  <b>Central Cee</b>
+                </h4>
+                <p class="card-text" style="color: white">Genre: Drill & Rap</p>
+                <a
+                  href="https://audiomack.com/eriq-dave"
+                  class="btn btn-outline-light"
+                  id="listen"
+                  >Listen Now</a
+                >
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- Artist 5 -->
-        <div class="col-md-4 mb-4">
-          <div class="card bg-dark text-white border-0" id="myMusic">
-            <img
-              src="./assets/3795801b973b2a2bece46f60454b3d7a.jpg"
-              class="card-img-top"
-              alt="Artist 1"
-            />
-            <div class="card-body">
-              <h4
-                class="card-title"
-                style="color: white; font-family: Arial; font-weight: bold"
-              >
-                <b>Omah Lay</b>
-              </h4>
-              <p class="card-text" style="color: white">Genre: Afrobeat</p>
-              <a
-                href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
-                target="_blank"
-                class="btn btn-outline-light"
-                id="listen"
-                >Listen Now</a
-              >
+          <!-- Artist 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="card bg-dark text-white border-0" id="myMusic">
+              <img
+                src="./assets/woman-recording-song-professional-music-studio-happy-young-woman-recording-song-professional-music-studio-smiling-101759551.webp"
+                class="card-img-top"
+                alt="Artist 1"
+              />
+              <div class="card-body">
+                <h4
+                  class="card-title"
+                  style="color: white; font-family: Arial; font-weight: bold"
+                >
+                  <b>Julie</b>
+                </h4>
+                <p class="card-text" style="color: white">Genre: Blues</p>
+                <a
+                  href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
+                  target="_blank"
+                  class="btn btn-outline-light"
+                  id="listen"
+                  >Listen Now</a
+                >
+              </div>
             </div>
           </div>
-        </div>
 
-        <!-- Artist 6 -->
-        <div class="col-md-4 mb-4" id="profile">
-          <div class="card bg-dark text-white border-0" id="myMusic">
-            <img
-              src="./assets/1269f947688682d833ce5b634bffe0c9.jpg"
-              class="card-img-top"
-              alt="Artist 1"
-            />
-            <div class="card-body">
-              <h4
-                class="card-title"
-                style="color: white; font-family: Arial; font-weight: bold"
-              >
-                <b>Eminem</b>
-              </h4>
-              <p class="card-text" style="color: white">Genre: Hip-Hop</p>
-              <a
-                href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
-                target="_blank"
-                class="btn btn-outline-light"
-                id="listen"
-                >Listen Now</a
-              >
+          <!-- Artist 3 -->
+          <div class="col-md-4 mb-4" id="profile">
+            <div class="card bg-dark text-white border-0" id="myMusic">
+              <img
+                src="./assets/listen-to-music-clipping-path-xxl-1899245.webp"
+                class="card-img-top"
+                alt="Artist 1"
+              />
+              <div class="card-body">
+                <h4
+                  class="card-title"
+                  style="color: white; font-family: Arial; font-weight: bold"
+                >
+                  <b>Drake</b>
+                </h4>
+                <p class="card-text" style="color: white">Genre: Hip-Hop & Rap</p>
+                <a
+                  href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
+                  target="_blank"
+                  class="btn btn-outline-light"
+                  id="listen"
+                  >Listen Now</a
+                >
+              </div>
             </div>
           </div>
         </div>
-      </div>
-    </section>
+        
   </body>
 </html>
