--- a/releases.html
+++ b/releases.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-dark bg-black navbar-expand-lg" style="position: fixed; width: 100%; z-index: 10000; margin-top: -12%;">
+        <nav class="navbar navbar-dark bg-black navbar-expand-lg" id="myhero">
           <div class="container">
             <a class="navbar-brand" href="#">
               <img src="/assets/BOY ALONE LABEL.png" alt="logo" class="logo" />
@@ -127,7 +127,7 @@
             title="DEPRESSION || RemedyNaija.com"
           ></iframe><br><br>
           <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
-       <button style="background-color: green; color: white; scale: 1.2;">Download</button>
+       <button id="downbtn">Download mp3</button>
        </a>
        </div>
        <hr>
