--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
                     <a class="nav-link" href="releases.html">Releases</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Our Sevices</a>
+                    <a class="nav-link" href="services.html">Our Sevices</a>
                   </li>
                   <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                   <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -104,7 +104,7 @@
                   <a class="nav-link" href="releases.html">Releases</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Our Sevices</a>
+                  <a class="nav-link" href="services.html">Our Sevices</a>
                 </li>
                 <li class="nav-item"><a class="nav-link" href="#">About</a></li>
                 <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
@@ -113,5 +113,15 @@
           </div>
         </nav>
       </header>
+
+
+
+
+
+<h1>hi there</h1>
+
+
+
+      
 </body>
 </html>
