editing responsiveness on mobile

--- a/artist.html
+++ b/artist.html
@@ -34,8 +34,8 @@
   <link rel="icon" href="/assets/BOY ALONE LABEL icon.png">
 
 
-  <body >
-    <header>
+  <body style="background-color: #000;">
+    <header style="box-shadow: 0 0 18px red;">
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
         <a class="navbar-brand" href="#">
@@ -114,7 +114,7 @@
 
     <section id="artists" class="content-section py-5">
       <div class="container text-center">
-        <h2 class="mb-4"><b>Artists</b></h2>
+        <h2 class="mb-4"><b style="color: white;">Artists</b></h2>
         <div class="row">
           <!-- Artist 1 -->
           <div class="col-md-4 mb-4">
@@ -133,7 +133,8 @@
                 </h4>
                 <p class="card-text" style="color: white">Genre: Afrobeat</p>
                 <a
-                  href="https://audiomack.com/eriq-dave"
+                  href="https://audiomack.com/eriq-lay"
+                  target="_blank"
                   class="btn btn-outline-light"
                   id="listen"
                   >Listen Now</a
@@ -199,7 +200,7 @@
         
     <section id="artists" class="content-section py-5">
       <div class="container text-center">
-        <h2 class="mb-4"><b>Featured Artist</b></h2>
+        <h2 class="mb-4"><b style="color: #fff;">Featured Artist</b></h2>
         <div class="row">
           <!-- Artist 1 -->
           <div class="col-md-4 mb-4">
@@ -218,7 +219,7 @@
                 </h4>
                 <p class="card-text" style="color: white">Genre: Drill & Rap</p>
                 <a
-                  href="https://audiomack.com/eriq-dave"
+                  href="https://open.spotify.com/artist/5H4yInM5zmHqpKIoMNAx4r?si=X5ke6rh4SsKaVwAUQPYRjQ" target="_blank"
                   class="btn btn-outline-light"
                   id="listen"
                   >Listen Now</a
@@ -240,11 +241,11 @@
                   class="card-title"
                   style="color: white; font-family: Arial; font-weight: bold"
                 >
-                  <b>Julie</b>
+                  <b>Nicki Minaj</b>
                 </h4>
                 <p class="card-text" style="color: white">Genre: Blues</p>
                 <a
-                  href="https://open.spotify.com/artist/5yOvAmpIR7hVxiS6Ls5DPO?si=iYr2O9WGQxStFvdE-_19Pg"
+                  href="https://open.spotify.com/artist/0hCNtLu0JehylgoiP8L4Gh?si=Qvrrb24oSdeERJKlxMj0SQ"
                   target="_blank"
                   class="btn btn-outline-light"
                   id="listen"
@@ -271,7 +272,7 @@
                 </h4>
                 <p class="card-text" style="color: white">Genre: Hip-Hop & Rap</p>
                 <a
-                  href="https://open.spotify.com/album/1kTlYbs28MXw7hwO0NLYif?si=vg_57iFSRc6X-llK4s7Yvg"
+                  href="https://open.spotify.com/artist/3TVXtAsR1Inumwj472S9r4?si=oQLLL5u7SUGWBsPPMgBLiw"
                   target="_blank"
                   class="btn btn-outline-light"
                   id="listen"
