--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   />
   <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
 
-  <body>
+  <body style="background-color: #000;">
     <header>
     <nav class="navbar navbar-dark bg-black navbar-expand-lg">
       <div class="container">
@@ -159,13 +159,13 @@
             />
             <div
               id="myHead"
-              class="carousel-caption d-none d-md-block"
+              class="carousel-caption"
               style="padding-bottom: 8rem"
             >
               <h1>Connect With Quality & Experienced Producers</h1>
               <p>
                 We have a team of producers who are passionate about creating
-                music that is unique .
+                music that is unique.
               </p>
             </div>
           </div>
@@ -182,7 +182,7 @@
             />
 
             <div
-              class="carousel-caption d-none d-md-block"
+              class="carousel-caption "
               style="padding-bottom: 8rem"
             >
               <h1>Distribution - Get Your music World Wide</h1>
@@ -204,10 +204,11 @@
               style="opacity: 70%"
             />
             <div
-              class="carousel-caption d-none d-md-block"
+            id="carousel"
+              class="carousel-caption "
               style="padding-bottom: 8rem"
             >
-              <h1>Collaborate with Artist and Producers without any hassle.</h1>
+              <h1>Collaborate with other Artists without any hassle.</h1>
               <p>Join our community and get your music at top charts.</p>
             </div>
           </div>
@@ -246,6 +247,8 @@
       max-width: 100%;
       margin: 20px auto;
       padding: 0 15px;
+      margin-bottom: 2%;
+      margin-top: 3.4%;
   }
   
   .responsive-btn {
