--- a/releases.html
+++ b/releases.html
@@ -32,8 +32,8 @@
 />
 <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
 </head>
-<body>
-    <header>
+<body style="background-color: #000;">
+    <header style="box-shadow: 0 0 15px red;">
         <nav class="navbar navbar-dark bg-black navbar-expand-lg" id="myhero">
           <div class="container">
             <a class="navbar-brand" href="#">
@@ -130,8 +130,28 @@
        <button id="downbtn">Download mp3</button>
        </a>
        </div>
-       <hr>
+       <hr class="mhr">
      
+       <div class="myaudio1">
+        <iframe src="https://audiomack.com/embed/eriq-lay/song/depression-cover-remedynaijacom" scrolling="no" width="100%" height="252" frameborder="0" title="DEPRESSION (COVER) || RemedyNaija.com"></iframe><br><br>
+        <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+     <button id="downbtn">Download mp3</button>
+     </a>
+       <hr class="mhr">
+      </div>
+      <div class="myaudio1">
+      <iframe
+        src="https://audiomack.com/embed/eriq-lay/song/depression-remedynaijacom"
+        scrolling="no"
+        width="100%"
+        height="252"
+        frameborder="0"
+        title="DEPRESSION || RemedyNaija.com"
+      ></iframe><br><br>
+      <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+   <button id="downbtn">Download mp3</button>
+   </a>
+   </div>
          
 
         </main>
