--- a/services.html
+++ b/services.html
@@ -32,8 +32,8 @@
   <link rel="shortcut" href="/assets/BOY ALONE LABEL icon.png" />
 
 </head>
-<body style="background-color: #000; box-shadow: 0 0 23px red;">
-    <header>
+<body >
+    <header style="background-color: #000; box-shadow: 0 0 23px red;">
         <nav class="navbar navbar-dark bg-black navbar-expand-lg">
           <div class="container">
             <a class="navbar-brand" href="#">
