--- a/releases.html
+++ b/releases.html
@@ -134,7 +134,7 @@
      
        <div class="myaudio1">
         <iframe src="https://audiomack.com/embed/eriq-lay/song/depression-cover-remedynaijacom" scrolling="no" width="100%" height="252" frameborder="0" title="DEPRESSION (COVER) || RemedyNaija.com"></iframe><br><br>
-        <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+        <a href="/musics/audio/AUD-20241111-WA0010..mp3" download="Depression(cover)_-_Eriq lay">
      <button id="downbtn">Download mp3</button>
      </a>
        <hr class="mhr">
