--- a/artist.html
+++ b/artist.html
@@ -232,7 +232,7 @@
           <div class="col-md-4 mb-4">
             <div class="card bg-dark text-white border-0" id="myMusic">
               <img
-                src="./assets/woman-recording-song-professional-music-studio-happy-young-woman-recording-song-professional-music-studio-smiling-101759551.webp"
+                src="./assets/los-angeles-ca-august-nicki-minaj-mtv-video-music-awards-held-microsoft-theater-usa-108348325.webp"
                 class="card-img-top"
                 alt="Artist 1"
               />
@@ -259,7 +259,7 @@
           <div class="col-md-4 mb-4" id="profile">
             <div class="card bg-dark text-white border-0" id="myMusic">
               <img
-                src="./assets/listen-to-music-clipping-path-xxl-1899245.webp"
+                src="./assets/Drake Editorial Stock Photo - Stock Image _ Shutterstock Editorial_files/drake-son-adonis-440nw-14320167h.jpg"
                 class="card-img-top"
                 alt="Artist 1"
               />
