--- a/releases.html
+++ b/releases.html
@@ -117,6 +117,7 @@
 
       <section>
         <main>
+          <!-- DEPRESSION -->
           <div class="myaudio">
           <iframe
             src="https://audiomack.com/embed/eriq-lay/song/depression-remedynaijacom"
@@ -131,29 +132,90 @@
        </a>
        </div>
        <hr class="mhr">
-     
+     <!-- DEPRESION (COVER) -->
        <div class="myaudio1">
         <iframe src="https://audiomack.com/embed/eriq-lay/song/depression-cover-remedynaijacom" scrolling="no" width="100%" height="252" frameborder="0" title="DEPRESSION (COVER) || RemedyNaija.com"></iframe><br><br>
         <a href="/musics/audio/AUD-20241111-WA0010..mp3" download="Depression(cover)_-_Eriq lay">
      <button id="downbtn">Download mp3</button>
      </a>
-       <hr class="mhr">
-      </div>
-      <div class="myaudio1">
-      <iframe
-        src="https://audiomack.com/embed/eriq-lay/song/depression-remedynaijacom"
-        scrolling="no"
-        width="100%"
-        height="252"
-        frameborder="0"
-        title="DEPRESSION || RemedyNaija.com"
-      ></iframe><br><br>
-      <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
-   <button id="downbtn">Download mp3</button>
-   </a>
-   </div>
-         
+    </div>
+    <hr class="mhr">
+<!-- LOVE ANTHEM -->
+   <div class="myaudio1">
+    <iframe src="https://audiomack.com/embed/eriq-lay/song/love-anthem-daveflavercom" scrolling="no" width="100%" height="252" frameborder="0" title="LOVE ANTHEM || Daveflaver.com"></iframe><br><br>
+  <a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
+<hr class="mhr">
+<!-- CLOSER -->
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/closer-daveflavercom" scrolling="no" width="100%" height="252" frameborder="0" title="Closer || Daveflaver.com"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>  
+<hr class="mhr">
+<!-- FALLING -->
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/falling-daveflavercom" scrolling="no" width="100%" height="252" frameborder="0" title="FALLING || Daveflaver.com"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
 
+<hr class="mhr">
+ 
+<!-- AGAIN -->
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/again-sad-daveflavercom" scrolling="no" width="100%" height="252" frameborder="0" title="AGAIN (SAD) || Daveflaver.com"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
+<hr class="mhr">
+
+<!-- CANADA -->
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/canada-daveflavercom" scrolling="no" width="100%" height="252" frameborder="0" title="CANADA ||Daveflaver.com"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
+<hr class="mhr">
+
+
+
+<!-- FINALISA -->
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/finalisa" scrolling="no" width="100%" height="252" frameborder="0" title="Finalisa"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
+<hr class="mhr">
+
+
+<!-- RIDDING -->
+
+
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/ridding-1" scrolling="no" width="100%" height="252" frameborder="0" title="Ridding"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
+
+<hr class="mhr">
+
+<!-- ALONE -->
+
+<div class="myaudio1">
+  <iframe src="https://audiomack.com/embed/eriq-lay/song/alone" scrolling="no" width="100%" height="252" frameborder="0" title="Alone"></iframe><br><br>
+<a href="/musics/audio/DEPRESSION.mp3" download="Depression_-_Eriq lay">
+<button id="downbtn">Download mp3</button>
+</a>
+</div>
         </main>
       </section>
 </body>
